# xdna

./: CMakeLists.txt  Makefile
docs/: flake.nix  requirements.txt
docs/source/: conf.py  index.rst  isa.rst  xdna1_kernel.rst  xdna2_kernel.rst
docs/source/_static/: custom.css
src/: XDNA1.mlir  XDNA2.mlir  bf16_mac.cpp  bf16_mac.s  bfp16_emu_mac.cpp  bfp16_emu_mac.s  driver_kernel.cpp  tensor_kernel_32x32x32_bf16_bf16_fp32.s  tensor_kernel_64x96x64_bfp16_bfp16_fp32.s
